--- a/pages/home.ejs
+++ b/pages/home.ejs
@@ -21,13 +21,13 @@
       <input type="text" class='form-control p-2' name="fullname" />
     </div>
 
-    <%-include("../partials/subjects", {num:"1",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"2",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"3",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"4",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"5",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"6a",subjects:subjects}) %>
-    <%-include("../partials/subjects", {num:"6b",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"1",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"2",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"3",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"4",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"5",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"6a",subjects:subjects}) %>
+    <%-include("../partials/line_input", {num:"6b",subjects:subjects}) %>
 
 
     <div class="mb-3 mx-auto buttonwidth" >
