--- a/partials/line_input.ejs
+++ b/partials/line_input.ejs
@@ -1,5 +1,8 @@
+
+
+<!-- this code creates one subject input and its label  -->
 <div class=" mb-3 mx-auto normalwidth" >   
-    <label class='form-label p-2' for="english">Line <%- num %></label><br>
+    <label class='form-label p-2' for="subjects">Line <%- num %></label><br>
     <div class="input-group">
       <select class='form-control p-2 col-md-6' name="subjects">
         <option value="none"></option>
