--- a/pages/db.ejs
+++ b/pages/db.ejs
@@ -6,8 +6,7 @@
   <link href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-  <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   <script src="/db.js"></script>
   
 </head>
