--- a/pages/db.ejs
+++ b/pages/db.ejs
@@ -14,19 +14,23 @@
 
 <body>
   <h1 class='text-center '>User table</h1>
+  <h3 id="showlogin">Logged in as: Guest</h3>
+  <p>Click a row to log in as them</p>
   <!-- <p class='text-center '>Enter both the class and its number</p> -->
+  
 <table id="table_id">
   <thead>
     <tr>
       <th>ID</th>
       <th>Name</th>
-      <th>Line 1</th>
-      <th>Line 2</th>
-      <th>Line 3</th>
-      <th>Line 4</th>
-      <th>Line 5</th>
-      <th>Line 6a</th>
-      <th>Line 6b</th>
+      <th>1</th>
+      <th>2</th>
+      <th>3</th>
+      <th>4</th>
+      <th>5</th>
+      <th>6</th>
+      <th>7</th>
+      <th>8</th>
       <th>Similarity %</th>
     </tr>
   </thead>
