highlighting and more

--- a/pages/home.ejs
+++ b/pages/home.ejs
@@ -14,7 +14,7 @@
 <div class='d-grid gap-3'>
   <br>
   <h1 class='text-center '>CHS 2022 Class Matcher</h1>
-  <p class='text-center '>Enter both the class and its number<br>Leave subject or number empty if needed, ignore order</p>
+  <p class='text-center '>Enter both the class and its number<br>Leave subject or number empty if needed, ignore order<br>Ignore 11R1 and lifeready</p>
 
   <form method="POST" action="/">
     <div class="mb-3 mx-auto normalwidth" >
