--- a/pages/home.ejs
+++ b/pages/home.ejs
@@ -21,7 +21,9 @@
       <label for="fullname" class='form-label p-2'>Name</label><br>
       <input type="text" class='form-control p-2' name="fullname" />
     </div>
-
+    <div class=" mb-3 mx-auto normalwidth" >   
+      <label for="subjects" class='form-label p-2'>Subjects</label>
+      </div>
     <%-include("../partials/line_input") %>
     <%-include("../partials/line_input") %>
     <%-include("../partials/line_input") %>
